<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="80px"
    android:id="@+id/loginLaout">


    <ImageView
        android:id="@+id/title"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:src="@mipmap/img_logo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="HelveticaNeue"
        android:hint="@string/hint_user"
        android:textColorHint="@color/textcolorhint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="HelveticaNeue"
            android:inputType="textPersonName"
            android:textColor="@color/textcolorhint"
            android:textSize="15sp"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5.5dp"
        android:fontFamily="HelveticaNeue"
        android:hint="@string/hint_password"
        android:textColorHint="@color/textcolorhint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="HelveticaNeue"
            android:inputType="textPassword"
            android:textColor="@color/textcolorhint"
            android:textSize="15sp"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"


        android:backgroundTint="@color/loginBG"
        android:gravity="center"
        android:text="Login"
        android:textAllCaps="false"

        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</RelativeLayout>