<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/statmentsLayout">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_alignParentStart="true"
...
